--- a/src/main/resources/static/css/row-col.css
+++ b/src/main/resources/static/css/row-col.css
@@ -36,7 +36,11 @@
     width: 65%;
     margin-top: 6px;
 }
-
+.col-90 {
+    float: left;
+    width: 90%;
+    margin-top: 6px;
+}
 /* Clear floats after the columns */
 .row:after {
     content: "";
