--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -1,6 +1,6 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta charset="utf-8">
+    <meta http-equiv="content-type" content="text/html" charset="utf-8">
     <script src="jquery-3.3.1.js" th:src="@{/jquery-3.3.1.js}"></script>
     <script src="./bootstrap-3.3.7-dist/js/bootstrap.js" th:src="@{/bootstrap-3.3.7-dist/js/bootstrap.js}"></script>
     <script src="./dist-res/js/bootstrap-datepicker-custom.js" th:src="@{/dist-res/js/bootstrap-datepicker-custom.js}"></script>
