--- a/src/main/resources/templates/form/formCreate.html
+++ b/src/main/resources/templates/form/formCreate.html
@@ -30,13 +30,6 @@
             }
         });
         }
-
-
-
-
-
-
-
     </script>
 </head>
 <body style="font-family:Verdana;" th:id="form">
@@ -394,7 +387,10 @@
                     </thead>
                     <tbody>
                     <tr th:each="loadtest,rowStat : *{loadTestScenarioList}">
-                        <td th:text="${rowStat.count}">1</td>
+                        <td>
+                            <label th:text="${rowStat.count}">1</label>
+                            <input type="hidden" name="*{loadTestScenarioList[__${rowStat.index}__].id}" th:field="*{loadTestScenarioList[__${rowStat.index}__].id}">
+                        </td>
                         <td>
                             <input type="text" th:field="*{loadTestScenarioList[__${rowStat.index}__].detail}"/>
                         </td>
@@ -432,7 +428,10 @@
                     </thead>
                     <tbody>
                     <tr th:each="reliTest,rowStat : *{reliabilityTestScenarioList}">
-                        <td th:text="${rowStat.count}">1</td>
+                        <td>
+                            <label th:text="${rowStat.count}">1</label>
+                            <input type="hidden" name="*{reliabilityTestScenarioList[__${rowStat.index}__].id}" th:field="*{reliabilityTestScenarioList[__${rowStat.index}__].id}">
+                        </td>
                         <td>
                             <input type="text" th:field="*{reliabilityTestScenarioList[__${rowStat.index}__].detail}"/>
                         </td>
@@ -470,7 +469,10 @@
                     </thead>
                     <tbody>
                     <tr th:each="stressTest,rowStat : *{stressTestScenarioList}">
-                        <td th:text="${rowStat.count}">1</td>
+                        <td>
+                            <label th:text="${rowStat.count}">1</label>
+                            <input type="hidden" name="*{stressTestScenarioList[__${rowStat.index}__].id}" th:field="*{stressTestScenarioList[__${rowStat.index}__].id}">
+                        </td>
                         <td>
                             <input type="text" th:field="*{stressTestScenarioList[__${rowStat.index}__].detail}"/>
                         </td>
