--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -24,10 +24,10 @@
 			<!--<th>User</th>-->
 		</tr>
 		<tr th:each="case : ${caseList}">
-			<td><a th:text="${case.projectId}" th:href="${'/form/' + case.id}"></a></td>
-			<td><a th:text="${case.projectName}" th:href="${'/form/' + case.id}"></a></td>
-			<td><a th:text="${case.contact}" th:href="${'/form/' + case.id}"></a></td>
-			<td><a th:text="${case.statusRequest}" th:href="${'/form/' + case.id}"></a></td>
+			<td><a th:text="${case.projectId}" th:href="${'/form/formView/' + case.id}"></a></td>
+			<td><a th:text="${case.projectName}" th:href="${'/form/formView/' + case.id}"></a></td>
+			<td><a th:text="${case.contact}" th:href="${'/form/formView/' + case.id}"></a></td>
+			<td><a th:text="${case.statusRequest}" th:href="${'/form/formView/' + case.id}"></a></td>
 			<!--<td><a th:text="${case.userWeb.username}" th:href="${'/form/edit/' + case.id}"></a></td>-->
 		</tr>
 	</table>
